Bugfix: There was a layout bug, where classes was not applied correctly. Version: Updated version to v0.0.5

--- a/stepper.scss
+++ b/stepper.scss
@@ -39,10 +39,6 @@ $activeStepColor: lighten($completedStepColor, 10%);
   @include transition;
 }
 
-.feb-value-text {
-  font-weight: bold;
-}
-
 .feb-step-bubble {
   @include bubble($bobbleSize);
   border-radius: $bobbleSize;
